Tests/Modules/Error/Mixed/.build/mixedcatcher.pr
{
  "name": "MixedCatcher",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %mixedCaught% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%mixedCaught%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            },
            {
              "name": "Type",
              "value": "bool",
              "type": "string"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Mixed/MixedCatcher.goal",
  "prPath": "/Modules/Error/Mixed/.build/mixedcatcher.pr",
  "hash": "a0848b3b32f6aca7e670247d79e5ae4b3856ac7f6beaf496c5b132e23a2daa67",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}